--- a/contents/contents.html
+++ b/contents/contents.html
@@ -18,7 +18,7 @@
 <body>
     <header class="d-flex justify-content-end gap-5 flex-row-reverse align-items-center sticky-top">
         <h1 class="flex-grow-1 ">الفهرس</h1>
-        <a href="/Science/../../index.html"
+        <a href="../../index.html"
             
         button class="custom-button">
             الصفحة الرئيسية
