--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </span> 
     </h2>
     <h3>لنستكشف سوياً أسرار الطبيعة ونفهم أساسيات العلوم</h3>
-<a href="/contents/contents.html" class="main-btn">هيا بنا</a>
+<a href="/Science/contents/contents.html" class="main-btn">هيا بنا</a>
 </div>
 
 
