--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 <header>
 <nav class="navigation">
-<a href="/index.html">الصفحة الرئيسية</a>
-<a href="/contents/contents.html">المحتوي</a>
-<a href="activites/activites.html">الأنشطة</a>
-<a href="/test/test.html">الاختبارات</a>
+<a href="/Science/index.html">الصفحة الرئيسية</a>
+<a href="/Science/contents/contents.html">المحتوي</a>
+<a href="/Science/activites/activites.html">الأنشطة</a>
+<a href="/Science/test/test.html">الاختبارات</a>
 </nav>
 </header>
 
