--- a/activites/activites.html
+++ b/activites/activites.html
@@ -16,9 +16,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="unitOne.css">
-    <link rel="stylesheet" href="/contents/contents.css">
-    <link rel="stylesheet" href="/css/all.min.css">
-    <link rel="stylesheet" href="/activites/activites.css">
+    <link rel="stylesheet" href="/Science/contents/contents.css">
+    <link rel="stylesheet" href="/Science/css/all.min.css">
+    <link rel="stylesheet" href="/Science/activites/activites.css">
 
     
 </head>
