--- a/activites/activites.html
+++ b/activites/activites.html
@@ -26,7 +26,7 @@
 <body>
     <header class="d-flex justify-content-end gap-5 flex-row-reverse align-items-center sticky-top">
         <h1 class="flex-grow-1 ">الأنشطة</h1>
-        <a href="../../index.html"
+        <a href="/Science/index.html"
             
         button class="custom-button">
         الصفحة الرئيسية
