--- a/contents/contents.html
+++ b/contents/contents.html
@@ -18,7 +18,7 @@
 <body>
     <header class="d-flex justify-content-end gap-5 flex-row-reverse align-items-center sticky-top">
         <h1 class="flex-grow-1 ">الفهرس</h1>
-        <a href="../../index.html"
+        <a href="/Science/index.html"
             
         button class="custom-button">
             الصفحة الرئيسية
@@ -55,7 +55,7 @@
                     <li class="list-group-item">علاقة الوظائف بالتكيف</li>
                 </ul>
                 <div class="card-body">
-                    <a href="/uniteone/lesson1/lesson1.html" button class="custom-button">هيا لنتعلم</a>
+                    <a href="/Science/uniteone/lesson1/lesson1.html" button class="custom-button">هيا لنتعلم</a>
                 </div>
             </div>
 
@@ -79,7 +79,7 @@
 
                 </ul>
                 <div class="card-body">
-                    <a href="/uniteone/lesson2/lesson2.html" button class="custom-button">هيا لنتعلم</a>
+                    <a href="/Science/uniteone/lesson2/lesson2.html" button class="custom-button">هيا لنتعلم</a>
                 </div>
             </div>
 <br>
