--- a/index.html
+++ b/index.html
@@ -1,53 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="stylesheet" href="css/normalize.css">
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="/Science/style.css" />
+    <link rel="stylesheet" href="/Science/css/normalize.css" />
 
     <title>Document</title>
-</head>
-<body>
-<header>
-<nav class="navigation">
-<a href="/index.html">الصفحة الرئيسية</a>
-<a href="/contents/contents.html">المحتوي</a>
-<a href="activites/activites.html">الأنشطة</a>
-<a href="/test/test.html">الاختبارات</a>
-</nav>
-</header>
+  </head>
+  <body>
+    <header>
+      <nav class="navigation">
+        <a href="/Science/index.html">الصفحة الرئيسية</a>
+        <a href="/Science/contents/contents.html">المحتوي</a>
+        <a href="/Science/activites/activites.html">الأنشطة</a>
+        <a href="/Science/test/test.html">الاختبارات</a>
+      </nav>
+    </header>
 
-<section class="main">
-<div>
-    <h2>مرحباً بكم أيها الأصدقاء في عالم العلوم المثير <br>
-      <span>
-            للصف الرابع الإبتدائي
-        </span> 
-    </h2>
-    <h3>لنستكشف سوياً أسرار الطبيعة ونفهم أساسيات العلوم</h3>
-<a href="/contents/contents.html" class="main-btn">هيا بنا</a>
-</div>
+    <section class="main">
+      <div>
+        <h2>
+          مرحباً بكم أيها الأصدقاء في عالم العلوم المثير <br />
+          <span> للصف الرابع الإبتدائي </span>
+        </h2>
+        <h3>لنستكشف سوياً أسرار الطبيعة ونفهم أساسيات العلوم</h3>
+        <a href="/Science/contents/contents.html" class="main-btn">هيا بنا</a>
+      </div>
+    </section>
 
-
-
-</section>
-
-
-
-
-
-
-
-<script src="script.js"></script>
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-</body>
+    <script src="/Science/script.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
-
-
-
-<link rel="stylesheet" type="text/css" href="style.css" />
-<link rel="stylesheet" href= />
