--- a/unite3/lesson3/lesson3.html
+++ b/unite3/lesson3/lesson3.html
@@ -13,6 +13,8 @@
     />
     <link rel="stylesheet" href="/Science/unite3/lesson3/lesson3.css" />
     <link rel="stylesheet" href="/Science/contents/contents.css" />
+    <link rel="stylesheet" href="/Science/style.css">
+
 
     <style>
       body {
