--- a/unite 2/lesson2/lesson2.html
+++ b/unite 2/lesson2/lesson2.html
@@ -13,6 +13,8 @@
     />
     <link rel="stylesheet" href="/Science/unite 2/lesson2/lesson2.css" />
     <link rel="stylesheet" href="/Science/contents/contents.css" />
+    <link rel="stylesheet" href="/Science/style.css">
+
   </head>
 
   <body>
