--- a/unite3/lesson1/lesson1.html
+++ b/unite3/lesson1/lesson1.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="/Science/unite3/lesson1/lesson1.css" />
     <link rel="stylesheet" href="/Science/contents/contents.css" />
     <link rel="stylesheet" href="/Science/css/all.min.css" />
+    <link rel="stylesheet" href="/Science/style.css">
+
     <style>
       body {
         direction: rtl;
