--- a/unite4/lesson2/lesson2.html
+++ b/unite4/lesson2/lesson2.html
@@ -13,6 +13,8 @@
     />
     <link rel="stylesheet" href="/Science/unite4/lesson1/lesson1.css" />
     <link rel="stylesheet" href="/Science/contents/contents.css" />
+    <link rel="stylesheet" href="/Science/style.css">
+
     <style>
       body {
         direction: rtl;
