--- a/uniteone/lesson3/lesson3.html
+++ b/uniteone/lesson3/lesson3.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="/Science/lesson3.css" />
     <link rel="stylesheet" href="/Science/contents/contents.css" />
     <link rel="stylesheet" href="/Science/css/all.min.css" />
+    <link rel="stylesheet" href="/Science/style.css">
+
   </head>
 
   <body>
